# jestimator

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: pytest_and_autopublish.yml
docs/: gcp-finetune.md  gcp-pretrain.md
jestimator/: __init__.py  amos.py  amos_helper.py  amos_helper_test.py  amos_test.py  checkpoint_utils.py  data_utils.py  estimator.py  modeling.py  states.py
jestimator/data/: pipeline_lm.py  pipeline_rec.py  pipeline_seqio.py  reader.py
jestimator/models/bert/: finetune.py  modeling.py  pretrain.py
jestimator/models/bert_rpe/: finetune.py  modeling.py  pretrain.py
jestimator/models/linear_regression/: linear_regression.py  linear_regression_test.py
jestimator/models/lstm/: lm.py  modeling.py
jestimator/models/lstm/ptb/: ptb.test.txt  ptb.valid.txt  vocab.txt
jestimator/models/mnist/: mnist.ipynb  mnist.py
jestimator/models/rope/: finetune.py  modeling.py  pretrain.py
